--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>MiniApp2</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.3.2/css/simple-line-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,700">
 </head>
 <body>
     <div id="app"></div>
